<resources>
  <string name="app_name">droidcon Berlin</string>


  <string name="screen_title_sessions">Sessions</string>
  <string name="screen_title_my_schedule">My Schedule</string>
  <string name="screen_title_speakers">Speakers</string>
  <string name="screen_title_barcamp">Barcamp</string>
  <string name="screen_title_twitter">Twitter</string>
  <string name="search_hint">Sessions, Speakers …</string>


  <string name="error_unknown">An unexpected error has occurred.</string>
  <string name="error_unknown_retry">An unexpected error has occurred.\nClick here to retry.</string>
  <string name="error_search_invalid">The inserted query string is not valid</string>

  <string name="sessions_sticky_date_format">MM/dd</string>

  <string name="empty">Wow, such empty.\nCheck back later.</string>
  <string name="session_empty_view">No sessions available yet. Stay tuned.</string>
  <string name="my_schedule_empty_view">No session in your schedule yet.\nClick here to browse all available sessions.</string>
  <string name="session_details_no_data">No data for this session available yet</string>
  <string name="session_details_added_to_schedule">Session has been added. You will receive a Notification 10 minutes before Session starts.</string>
  <string name="error_session_details_added_to_schedule">An error has occurred. Please retry.</string>
  <string name="error_session_details_removed_from_schedule">An error has occurred. Please retry.</string>
  <string name="speaker_details_no_data">No data for this speaker available yet</string>


  <string name="notification_title">A session starts soon</string>
  <string name="notification_text">%1$s starts at %2$s</string>


  <string name="menu_license">License</string>
  <string name="menu_search">Search</string>

  <string name="search_query_hint">Search ...</string>
  <string name="search_no_results">No results found</string>

  <string name="session_details_when">When</string>
  <string name="session_details_where">Where</string>
  <string name="session_details_abstract">About</string>

  <string name="app_update_available_title">Update available</string>
  <string name="app_update_available_description">A new version of this app is available on the Play Store.</string>
  <string name="app_update_available_install">Install</string>
  <string name="app_update_available_close">Close</string>

  <string name="goodbye">Droidcon Berlin 2018 is over.\nSee you next year!</string>
  <string name="sponsor_section_header">Our Sponsors</string>

  <string-array name="overflow_items">
    <item>Source Code</item>
    <item>Open Source Licenses</item>
  </string-array>
</resources>
