<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/nav_sessions"
      android:icon="@drawable/ic_sessions"
      android:title="@string/screen_title_sessions"/>

  <item
      android:id="@+id/nav_my_schedule"
      android:icon="@drawable/ic_my_schedule"
      android:title="@string/screen_title_my_schedule"/>

  <item
      android:id="@+id/nav_speakers"
      android:icon="@drawable/ic_speakers"
      android:title="@string/screen_title_speakers"/>

  <item
      android:id="@+id/nav_barcamp"
      android:icon="@drawable/ic_barcamp"
      android:title="@string/screen_title_barcamp"/>

  <item
      android:id="@+id/nav_twitter"
      android:icon="@drawable/ic_twitter"
      android:title="@string/screen_title_twitter"/>

</menu>
