<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_background_color"
    >


  <LinearLayout
      android:id="@+id/dialog_container"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="8dp"
      android:background="@drawable/dialog_bg"
      android:elevation="4dp"
      android:minWidth="280dp"
      android:orientation="vertical"
      >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:text="@string/app_update_available_title"
        style="@style/Base.DialogWindowTitle.AppCompat"
        />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/app_update_available_description"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/close"
          android:layout_width="wrap_content"
          android:layout_height="36dp"
          android:layout_marginBottom="8dp"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:minWidth="64dp"
          android:textColor="@color/textColorSecondary"
          android:text="@string/app_update_available_close"
          style="@style/Widget.AppCompat.Button.Borderless.Colored"
          />

      <Button
          android:id="@+id/install"
          android:layout_width="wrap_content"
          android:layout_height="36dp"
          android:layout_marginBottom="8dp"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:minWidth="64dp"
          android:text="@string/app_update_available_install"
          style="@style/Widget.AppCompat.Button.Borderless.Colored"
          />

    </LinearLayout>

  </LinearLayout>
</FrameLayout>